--- a/Sales.html
+++ b/Sales.html
@@ -19,7 +19,49 @@
     <title>Cookie-Stand</title>
     </head>
     
-    <body>
+<title>Cookie Company</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <h1>locations</h1>
+    <h2>Store Sales</h2>
+<table>
+    <tbody id="cities" align="left"></table>
+   </table>
+    <script src="app.js"></script>
+</body>
+
+</html>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <!-- lab 6 -->
+  
+    <!-- <body>
         <header>
             <h1 id="heading">Cookies</h1>
         </header>
@@ -49,6 +91,6 @@
 <footer>
     
 </footer>
-</html>
+</html> -->
 
 
