--- a/Sales.html
+++ b/Sales.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +28,7 @@
 </head>
 
 <body>
+    <a href="/index.html">Home</a> 
     <h1>locations</h1>
     <h2>Store Sales</h2>
 <table>
