added sales link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!-- nav sales //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
       <nav id="mainNav">
             <nav id="mainNav"> 
-                  <a href="/Sales.html">Sales</a> 
+              <a href="Sales.html">Sales</a>
             <p></p>Pat's Salmon Cookies<p></p>
             1107 E REPUBLICAN ST SEATTLE WA 98102-5133, USA
             <p></p>(555) 555-5555</p>
