--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               }
             #Header {
               grid-area: header;
-              background-image: url(/images/chinook.jpeg);
+              background-image: url(images/chinook.jpeg);
               color: pink;
               }
             #Footer {
@@ -74,7 +74,7 @@
       <header id="Header"><h1>Pat's Salmon Cookies</h1></header>
       <article id="welcome">
             <h1> Welcome!</h1>
-      <img src="/images/family.jpeg"/> 
+      <img src="images/family.jpeg"/> 
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lacinia sem non bibendum aliquet. 
             Aenean aliquet lacinia sem quis vulputate. Curabitur at urna sit amet odio congue vehicula quis quis nunc. 
             Fusce et elit metus. Integer vehicula lectus ac tempor iaculis. Donec porttitor at ex sit amet pellentesque. 
@@ -87,10 +87,10 @@
             interdum a laoreet at, vestibulum eu dui. In hac habitasse platea dictumst. Curabitur ac feugiat velit, feugiat bibendum leo. 
             Nulla sed nulla vel orci fermentum mollis. Etiam metus massa, maximus nec nulla sit amet, mollis auctor mi.
       </p>
-      <img src="/images/salmon.png"/>
+      <img src="images/salmon.png"/>
       <h3>Check out our Merch!</h3>
 
-      <img src="images/shirt.jpeg"/> <img src="images/cutter.jpeg"/> <img src="/images/fish.jpeg"/><img src="/images/frosted-cookie.jpeg"/>
+      <img src="images/shirt.jpeg"/> <img src="images/cutter.jpeg"/> <img src="images/fish.jpeg"/><img src="images/frosted-cookie.jpeg"/>
       
 </article>
 <!-- nav sales //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
